--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-s2clientprotocol==4.10.3.76114.0
+s2clientprotocol~=4.11.4.78285.0
 portpicker==1.3.1
-numpy==1.18.2
+numpy~=1.18.3
 requests==2.23.0
 aiohttp==3.6.2
 scipy==1.4.1
@@ -8,3 +8,6 @@ opencv-python==4.1.1.26
 more-itertools==7.2.0
 pipenv==2018.11.26
 mpyq==0.2.5
+
+six~=1.14.0
+scikit-learn~=0.22.2.post1
